# tesseractui

./: CMakeLists.txt  MVP.md  README.md
examples/: test_widgets.cpp
include/tesseractui/: buffer.hpp  event.hpp  reactive.hpp  renderer.hpp  signals.hpp  types.hpp  widget.hpp
include/tesseractui/widgets/: button.hpp  label.hpp
src/: buffer.cpp  renderer.cpp  widget.cpp
src/widgets/: button.cpp  label.cpp
